--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "h5p-desktop",
+  "name": "h5p-preview",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "electron:build": "vue-cli-service electron:build",
-    "electron:serve": "vue-cli-service electron:serve",
-    "postinstall": "electron-builder install-app-deps",
-    "server:serve": "node src/server.js",
-    "postuninstall": "electron-builder install-app-deps"
+    "server:serve": "node src/server.js"
   },
   "main": "background.js",
   "dependencies": {
+    "adm-zip": "^0.4.16",
+    "body-parser": "^1.19.0",
+    "copy-webpack-plugin": "^6.2.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
     "h5p-standalone": "^2.1.3",
+    "nocache": "^2.1.0",
     "vue": "^3.0.0-0"
   },
   "devDependencies": {
@@ -25,11 +27,8 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0-0",
     "babel-eslint": "^10.1.0",
-    "electron": "^9.0.0",
-    "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0",
-    "vue-cli-plugin-electron-builder": "~2.0.0-rc.4"
+    "eslint-plugin-vue": "^7.0.0-0"
   },
   "eslintConfig": {
     "root": true,
